@@ -82,6 +82,7 @@ Getaway: High Speed II, The L-5C (competition MOD)
 Junk Yard 1.2C (competition MOD)
 Meteor (Bugfix)
 Orbitor 1 (No Timed Game)
+Rambo (unofficial MOD of Raven)
 Star Trek: The Next Generation LX-7C (competition MOD)
 Star Wars 20th Anniversary 1.07 Spanish
 Striker Xtreme 1.01 Italian
